<resources>
    <string name="app_name">TagNearEmployee</string>
    <string name="places_api_key">AIzaSyDciCT_D9L8ov8GQ-yRAuStNHTjABVIlV4</string>
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="welcomeback">Welcome Back,</string>
    <string name="sign_in_to_continue">Please sign in to continue</string>
    <string name="new_user">Dont have an account ?</string>
    <string name="createaccount">Sign up here</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Mobile</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign">Sign in</string>
    <string name="donthaveaccount">Dont have an account ? Sign up here</string>
    <string name="welcome">Welcome To Tag Near !</string>
    <string name="sign_up_with">Sign up with business as </string>
    <string name="hint_name">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_city">City</string>
    <string name="businessname">Shop Name</string>
    <string name="hint_otp">Otp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_otp">VerifyOtp</string>
    <string name="enterotp">Please enter the otp sent to </string>
    <string name="resend">Resend OTP</string>
    <string name="verfiy">Verify OTP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="category">Category</string>
    <string name="receive">Did not receive code ?</string>
    <string name="enter_correct_otp">Enter correct otp</string>
    <string name="hint_firstname">First Name</string>
    <string name="grant_permission">Please grant permissions</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="shop_name">Shop Name</string>
    <string name="itemname">Item Name</string>
    <string name="mylist">My List</string>
    <string name="service_name">Service Name</string>
    <string name="description">Description</string>
    <string name="beauty">The experience of beauty often involves an interpretation of some entity as being in balance and harmony with nature, which may lead to feelings of attraction and emotional well-being. Because this can be a subjective experience, it is often said that</string>
    <string name="add">Add Service</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="order">Orders State</string>
    <string name="deliver">Deliver</string>
    <string name="rejected">Rejected</string>
    <string name="pincode">Pincode</string>
    <string name="organisation">Organization Name</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="departments">Departments</string>
    <string name="lets_get_in_touch">GET IN TOUCH</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="contactus">Contact</string>
    <string name="total">Total Earned</string>
    <string name="paid">Paid</string>
    <string name="balance">Balance</string>
    <string name="orders">Recent Orders</string>
    <string name="_01"># 01</string>
    <string name="Rs">\u20B9</string>
    <string name="about_us">About Us</string>
    <string name="order_id">Order Id</string>
    <string name="call">Call</string>
    <string name="direction">Direction</string>
    <string name="quantity">Quantity</string>
    <string name="items">Items</string>
    <string name="price">Price</string>
    <string name="tot">Total</string>
    <string name="res">Resend</string>
    <string name="enter_your_registered_mobile_to_reset_password">Enter your registered mobile to reset password</string>
    <string name="no_orders">NO ORDERS</string>
    <string name="ad">ADD</string>
    <string name="please_enter_valid_credentials_and_try_again">Please enter valid credentials and try again</string>
    <string name="next">NEXT</string>
    <string name="beauty_tips">Beauty Tips</string>
    <string name="vendorid">Vendor Id</string>
    <string name="clear_pad">Clear</string>
    <string name="save_signature">Save Signature</string>
    <string name="complete">Complete and Verify</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude longitude used</string>
    <string name="no_address_found">No address found</string>
    <string name="title_activity_maps2">Map</string>
    <string name="shop">Shop</string>
    <string name="mobility">Mobility</string>
    <string name="personal_information">Personal Information</string>
    <string name="shop_information">Shop Information</string>
    <string name="Please_check_fields">Please check fields</string>
    <string name="submit">Submit</string>
    <string name="shop_details">Shop Details</string>
    <string name="pick_image_intent_chooser_title">Select Image</string>
    <string name="txt_use_photo">Use Photo</string>
    <string name="txt_retake">Retake</string>
    <string name="crop_image_activity_no_permissions">Permissions Denied</string>
    <string name="timings">Select Time</string>
    <string name="reachedend">Reached end of list</string>
    <string name="document">Document Upload</string>
    <string name="idproof">Id proof upload</string>
    <string name="off">No</string>
    <string name="on">Yes</string>
    <string name="menuadd">Upload Menu</string>
</resources>
