<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:background="@color/colorWhite"
    android:layout_gravity="center"
    tools:context=".boardingscreens.login.LoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/margin_200dp"
        android:layout_height="@dimen/margin_50dp"
        android:layout_marginLeft="@dimen/margin_18dp"
        android:layout_marginTop="@dimen/margin_50dp"
        android:src="@drawable/tagslogo"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:id="@+id/partner"
        android:visibility="gone"
        android:textStyle="bold"
        android:text="Partner"
        android:textColor="@color/quantum_pink400"
        android:textSize="@dimen/textsize_14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize_18sp"
        android:text="@string/welcomeback"
        android:textColor="@color/color_black"
        android:id="@+id/sign"
        android:layout_marginTop="@dimen/margin_25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginLeft="@dimen/margin_20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize_14sp"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/quantum_grey700"
        android:id="@+id/text"
        android:layout_marginTop="@dimen/margin_5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign"
        android:layout_marginLeft="@dimen/margin_20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/EditTextStyle"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_60dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_phone"
        android:textColorHint="@color/bsp_dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            style="@style/EditTextStyle"
            android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
            android:drawablePadding="@dimen/margin_16dp"
            android:inputType="number"
            android:focusableInTouchMode="true"
            android:maxLength="10"
            android:paddingStart="@dimen/margin_16dp"
            android:paddingLeft="@dimen/margin_16dp"
            android:paddingTop="@dimen/margin_10dp"
            android:drawableLeft="@drawable/ic_telephone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/EditTextStyle"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_password"
        android:textColorHint="@color/bsp_dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/quantum_grey800">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        style="@style/EditTextStyle"
        android:drawableRight="@drawable/ic_visibility_off_black_24dp"
        android:drawablePadding="@dimen/padding_16dp"
        android:focusableInTouchMode="true"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingLeft="@dimen/margin_16dp"
        android:paddingTop="@dimen/margin_10dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/quantum_grey800"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize_12sp"
        android:visibility="gone"
        android:text="@string/please_enter_valid_credentials_and_try_again"
        android:textColor="@color/bsp_red"
        android:id="@+id/tv_errormeassage"
        android:drawablePadding="@dimen/margin_3dp"
        android:drawableLeft="@drawable/ic_error_black_24dp"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        android:layout_marginTop="@dimen/margin_2dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        android:layout_marginLeft="@dimen/margin_8dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize_14sp"
        android:text="@string/forgot_password"
        android:layout_marginRight="@dimen/margin_20dp"
        android:textColor="@color/quantum_grey700"
        android:id="@+id/tv_forgotpassword"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_errormeassage"
        android:layout_marginLeft="@dimen/margin_20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_50dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:background="@drawable/rectangle_shape_blue"
        android:text="@string/sign"
        android:textAllCaps="false"
        android:elevation="@dimen/dimen_4dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgotpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>