<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/layout_appboard"
        android:id="@+id/appboard"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_150dp"
        app:layout_constraintTop_toBottomOf="@+id/appboard"
        android:src="@drawable/profile"
        android:scaleType="fitXY"
        android:alpha="0.7"
        android:id="@+id/iv_profile" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/margin_100dp"
        android:layout_height="@dimen/margin_100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile"
        android:src="@drawable/profile"
        android:id="@+id/iv_imageprofile" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp"
            app:layout_constraintStart_toStartOf="@id/iv_imageprofile"
            app:layout_constraintTop_toBottomOf="@id/iv_imageprofile"
            android:text="@string/hint_name"
            android:id="@+id/tv_name"
            android:gravity="center"
            android:inputType="textCapSentences"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textsize_16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_3dp"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/iv_imageprofile"
            android:text="@string/hint_phone"
            android:id="@+id/tv_phone"
            android:textColor="@color/quantum_grey700"
            android:gravity="center"
            android:textSize="@dimen/textsize_14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        app:layout_constraintTop_toBottomOf="@id/tv_phone"
        android:text="@string/hint_email"
        android:layout_marginTop="@dimen/margin_20dp"
        android:paddingLeft="@dimen/margin_20dp"
        android:textSize="@dimen/textsize_14sp"
        android:textColor="@color/quantum_grey800" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:text="tagnear@gmail.com"
        android:id="@+id/tv_email"
        android:layout_marginTop="@dimen/margin_5dp"
        android:paddingLeft="@dimen/margin_25dp"
        android:paddingBottom="@dimen/margin_5dp"
        android:textSize="@dimen/textsize_12sp"
        android:textColor="@color/quantum_grey700" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@drawable/rect_back"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintBottom_toBottomOf="@id/tv_email"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gender"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:text="@string/gender"
        android:layout_marginTop="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_20dp"
        android:textSize="@dimen/textsize_14sp"
        android:textColor="@color/quantum_grey800" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gender"
        android:text="Female"
        android:id="@+id/tv_gender"
        android:paddingBottom="@dimen/margin_5dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:paddingLeft="@dimen/margin_25dp"
        android:textSize="@dimen/textsize_12sp"
        android:textColor="@color/quantum_grey700" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@drawable/rect_back"
        app:layout_constraintBottom_toBottomOf="@id/tv_gender"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/organization"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        android:text="@string/shop_name"
        android:layout_marginTop="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_20dp"
        android:textSize="@dimen/textsize_14sp"
        android:textColor="@color/quantum_grey800" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/organization"
        android:text="Tag Near"
        android:id="@+id/tv_organization"
        android:layout_marginTop="@dimen/margin_5dp"
        android:paddingLeft="@dimen/margin_25dp"
        android:paddingBottom="@dimen/margin_5dp"
        android:textSize="@dimen/textsize_12sp"
        android:textColor="@color/quantum_grey700" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@drawable/rect_back"
        app:layout_constraintTop_toBottomOf="@id/tv_organization"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        app:layout_constraintTop_toBottomOf="@id/tv_organization"
        android:text="@string/address"
        android:layout_marginTop="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_20dp"
        android:textSize="@dimen/textsize_14sp"
        android:textColor="@color/quantum_grey800" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:text="Hormaavu"
        android:id="@+id/tv_address"
        android:layout_marginTop="@dimen/margin_5dp"
        android:paddingLeft="@dimen/margin_25dp"
        android:paddingBottom="@dimen/margin_5dp"
        android:textSize="@dimen/textsize_12sp"
        android:textColor="@color/quantum_grey700" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@drawable/rect_back"
        app:layout_constraintTop_toBottomOf="@id/tv_address"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
