<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorWhite" >

    <ImageView
        android:layout_width="@dimen/margin_40dp"
        android:layout_height="wrap_content"
        android:id="@+id/iv_back"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/margin_200dp"
        android:layout_height="@dimen/margin_50dp"
        android:id="@+id/logo"
        android:src="@drawable/tagslogo"
        android:layout_marginLeft="@dimen/margin_5dp"
        android:layout_marginTop="@dimen/margin_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <TextView
        android:id="@+id/partner"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Partner"
        android:textColor="@color/quantum_pink400"
        android:textSize="@dimen/textsize_14sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginRight="@dimen/margin_12dp"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textpassword"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:textSize="@dimen/textsize_24sp"
        android:textColor="@color/quantum_grey900"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginLeft="@dimen/margin_16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile_to_reset_password"
        app:layout_constraintTop_toBottomOf="@+id/textpassword"
        android:textSize="@dimen/textsize_12sp"
        android:textColor="@color/quantum_grey700"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:id="@+id/text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobLayout"
        style="@style/EditTextStyle"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_phone"
        android:textColorHint="@color/bsp_dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            style="@style/EditTextStyle"
            android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
            android:drawablePadding="@dimen/margin_16dp"
            android:inputType="number"
            android:focusableInTouchMode="true"
            android:maxLength="10"
            android:paddingStart="@dimen/margin_16dp"
            android:paddingLeft="@dimen/margin_16dp"
            android:paddingTop="@dimen/margin_10dp"
            android:drawableLeft="@drawable/ic_telephone" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize_12sp"
        android:text="@string/please_enter_valid_credentials_and_try_again"
        android:textColor="@color/bsp_red"
        android:visibility="gone"
        android:id="@+id/tv_errormeassage"
        android:drawablePadding="@dimen/margin_3dp"
        android:drawableLeft="@drawable/ic_error_black_24dp"
        app:layout_constraintStart_toStartOf="@id/mobLayout"
        android:layout_marginTop="@dimen/margin_2dp"
        app:layout_constraintTop_toBottomOf="@id/mobLayout"
        android:layout_marginLeft="@dimen/margin_8dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_50dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:background="@drawable/rectangle_shape_blue"
        android:text="Reset"
        android:textAllCaps="false"
        android:elevation="@dimen/dimen_4dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>